[gd_scene load_steps=9 format=3 uid="uid://dhf8s7mqq7qw"]

[ext_resource type="Script" path="res://Menus/main_menu.gd" id="1_cpy3e"]
[ext_resource type="Texture2D" uid="uid://d4a2gmnoe1hl8" path="res://Assets/Background/PinballBackground.PNG" id="2_jd1ss"]
[ext_resource type="FontFile" uid="uid://b0y2v2pjg4t53" path="res://Assets/Xirod.otf" id="2_mpjpm"]
[ext_resource type="StyleBox" uid="uid://cmok5grx4a5be" path="res://Assets/ButtonResources/focus.tres" id="3_1ofb5"]
[ext_resource type="StyleBox" uid="uid://2hurb2u1fols" path="res://Assets/ButtonResources/hover_pressed.tres" id="4_ufmq8"]
[ext_resource type="StyleBox" uid="uid://clii8vvmbtw06" path="res://Assets/ButtonResources/hover.tres" id="5_vqi7h"]
[ext_resource type="StyleBox" uid="uid://rusj6n77jlbg" path="res://Assets/ButtonResources/pressed.tres" id="6_5n6kb"]
[ext_resource type="StyleBox" uid="uid://cjswjpwjntek5" path="res://Assets/ButtonResources/normal.tres" id="7_yv28l"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cpy3e")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jd1ss")

[node name="Panel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -223.0
offset_top = 80.0
offset_right = 223.0
offset_bottom = 176.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_mpjpm")
theme_override_font_sizes/font_size = 48
text = "The Stilled Horizon
Break Out"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -275.0
offset_right = 275.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_mpjpm")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("3_1ofb5")
theme_override_styles/hover_pressed = ExtResource("4_ufmq8")
theme_override_styles/hover = ExtResource("5_vqi7h")
theme_override_styles/pressed = ExtResource("6_5n6kb")
theme_override_styles/normal = ExtResource("7_yv28l")
text = "Play
"

[node name="StoryButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_mpjpm")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("3_1ofb5")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_ufmq8")
theme_override_styles/hover = ExtResource("5_vqi7h")
theme_override_styles/pressed = ExtResource("6_5n6kb")
theme_override_styles/normal = ExtResource("7_yv28l")
text = "Story"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_mpjpm")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = ExtResource("3_1ofb5")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_ufmq8")
theme_override_styles/hover = ExtResource("5_vqi7h")
theme_override_styles/pressed = ExtResource("6_5n6kb")
theme_override_styles/normal = ExtResource("7_yv28l")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StoryButton" to="." method="_on_story_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
